@@ -1,4 +1,4 @@
 """ The srllib package. """
 from __future__ import absolute_import
-__version__ = "0.5.0"
+__version__ = "0.5.1"
 __license__ = "MIT"
